--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
+    "auth:generate": "npx @better-auth/cli@latest generate --config ./config/auth.ts --output ./lib/db/schema/auth.ts",
     "deploy:vercel": "vercel --prod"
   },
   "dependencies": {
@@ -34,27 +35,31 @@
     "@heroui/switch": "2.2.21",
     "@heroui/system": "2.4.19",
     "@heroui/theme": "2.4.19",
-    "@libsql/sqlite3": "^0.3.1",
+    "@neondatabase/serverless": "^1.0.1",
     "@react-aria/ssr": "3.9.9",
     "@react-aria/visually-hidden": "3.8.25",
+    "@t3-oss/env-nextjs": "^0.13.8",
     "better-auth": "^1.3.0",
-    "better-sqlite3": "^12.2.0",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.0",
     "drizzle-orm": "^0.44.3",
     "framer-motion": "11.18.2",
     "geist": "^1.4.2",
     "intl-messageformat": "10.7.16",
+    "nanoid": "^5.1.5",
     "next": "15.3.1",
     "next-themes": "0.4.6",
+    "pg": "^8.16.3",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "zod": "^4.0.5"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "15.3.4",
     "@react-types/shared": "3.30.0",
     "@tailwindcss/postcss": "4.1.11",
-    "@types/better-sqlite3": "^7.6.13",
     "@types/node": "20.5.7",
+    "@types/pg": "^8.15.4",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "@typescript-eslint/eslint-plugin": "8.34.1",
@@ -75,6 +80,7 @@
     "prettier": "3.5.3",
     "tailwind-variants": "1.0.0",
     "tailwindcss": "4.1.11",
+    "tsx": "^4.20.3",
     "typescript": "5.6.3"
   }
 }
