--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint --fix",
     "test:auth": "node scripts/test-auth.js",
     "db:generate": "drizzle-kit generate",
-    "db:migrate": "drizzle-kit migrate",
+    "db:migrate": "tsx scripts/migrate.ts",
+    "db:add-created-by": "tsx scripts/add-created-by.ts",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
     "auth:generate": "npx @better-auth/cli@latest generate --config ./config/auth.ts --output ./lib/db/schema/auth.ts",
